--- a/views/users.ejs
+++ b/views/users.ejs
@@ -3,3 +3,11 @@
 <h1>
     <%=title%>
 </h1>
+
+<p>Name : <%=user .name%></p>
+<p>Email: <%=user.email%></p>
+
+<form action="/users/sign-out">
+    <input type="submit" value ="Sign-out">
+</form>
+ 
