--- a/views/user_signIn.ejs
+++ b/views/user_signIn.ejs
@@ -2,6 +2,6 @@
 
 <form action="/users/create-session" method="POST">
     <input type="email" name="email" placeholder="Email" required>
-    <input type="password" name="email" placeholder="Password" required>
+    <input type="password" name="password" placeholder="Password" required>
     <input type="submit" value="Sign in">
 </form>
