--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,21 @@
 <h1>Hemanthify / <%=title%></h1>
 <section id = "hemanthIfyPosts">
     <h4>Posts</h4>
-    <form action="" id="postForm" method="POST">
+    <%if (locals.user) {%>
+    <form action="/post/post_data" id="postForm" method="POST">
         <textarea name="content" id="newPost" cols="30" rows="3"></textarea>
         <input type="submit" value="Post">
     </form>
+    <%}%>
+    <ul>
+        <% for (i of posts) {%>
+            <li>
+                <p> 
+                    <%= i.content %>
+                    <br>
+                    <%= i.user.name%>
+                </p>
+            </li>
+        <%}%>
+    </ul>
 </section>
