--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,11 +16,11 @@
      <%- style%>
 </head>
     <body>
-        <%- include('_header'); %>
+        <%- include('_header'); -%>
          
         <%- body%>
             
-        <%-  include('_footer'); %>
+        <%-  include('_footer'); -%>
         
          
     
