--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="../css/footer.css">
+<link rel="stylesheet" type="text/css" href="/css/footer.css">
 <footer id="layout-footer">
     <div>
         <p>
