--- a/views/users.ejs
+++ b/views/users.ejs
@@ -2,7 +2,9 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 <h1>
     <%=title%>
-</h1>
+</h1> 
+<img src="<%=users_profile.avatar%>" alt="<%=users_profile.name%>" width="100">
+ 
 <p><%= users_profile.name%></p>
 <p><%= users_profile.email%></p>
 
