--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+    
      
     <title><%= title%></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css" integrity="sha512-0p3K0H3S6Q4bEWZ/WmC94Tgit2ular2/n0ESdfEX8l172YyQj8re1Wu9s/HT9T/T2osUw5Gx/6pAZNk3UKbESw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js" integrity="sha512-lOrm9FgT1LKOJRUXF3tp6QaMorJftUjowOWiDcG5GFZ/q7ukof19V0HKx/GWzXCdt9zYju3/KhBNdCLzK8b90Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    
+    <script src="/js/comments.js"></script>
     <link rel="stylesheet" type="text/css"  href="/css/layout.css">
      
      
@@ -32,7 +32,7 @@
                 <script> 
                     new Noty({
                         theme:'relax',
-                        text: '<%=flash.success%>',
+                        text: '<%=locals.flash.success%>',
                         type:'success',
                         layout:'topRight',
                         timeout:1000
@@ -43,7 +43,7 @@
                 <script>
                     new Noty({
                         theme:'relax',
-                        text: '<%=flash.error%>',
+                        text: '<%=locals.flash.error%>',
                         type:'error',
                         layout:'topRight',
                         timeout:1000
