--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -1,4 +1,4 @@
-<div>
+<div style="margin-top: 100px;">
     <form action="/users/forgotPassword" method="POST">
         <input type="email" name="email" id="" name="mail" placeholder="enter Email">
         <button>Submit</button>
