--- a/views/resetPass.ejs
+++ b/views/resetPass.ejs
@@ -1,4 +1,4 @@
-<div>
+<div style="margin-top: 100px;">
     <form action="/users/forgotForm" method="post">
         <input type="email" name="email" id="" placeholder="Enter Email">
         <input type="password" name = "password" placeholder="enter New Password">
