--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,7 +1,9 @@
 :root{
     --theme: rgb(241, 195, 241);
-    --header:rgb(152, 201, 209);
+    --header: #00203FFF;
     --profileBackground : cyan;
+    --bgGrad1: #00203FFF;
+    --bgGrad2: #ADEFD1FF; 
 }
 body{
     height:100%;
