--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -34,7 +34,7 @@
                     </li>
                     <% }else{ %>
                     <li id="signIN">
-                        <a href="/users/sign-in">Sign In</a>
+                        <a href="/users/sign-in">Sign in</a>
                     </li>
             
                     <% } %>
