--- a/assets/css/chat_box.css
+++ b/assets/css/chat_box.css
@@ -6,19 +6,16 @@ body {
 
 #chatPageCon {
   display: flex;
-  height: 100%;
+  height: calc(100vh - 5rem);
   width: 100%; }
 
 .friends-container {
   flex: 1;
   height: 100%;
   display: flex;
-  flex-direction: column;
-  border: 1px solid black; }
+  flex-direction: column; }
   .friends-container .friend-heading {
-    flex: 1;
-    font-size: 1rem;
-    height: 10%; }
+    font-size: 2rem; }
   .friends-container #friends-div {
     flex-direction: column; }
     .friends-container #friends-div .reciever-container {
@@ -47,30 +44,43 @@ body {
   width: 100%; }
 
 #chat-DOM {
-  border: 1px solid black;
   height: 100%;
   flex: 3;
-  border: 1px solid black; }
+  border: 1px solid; }
   #chat-DOM #chat-container {
-    overflow: scroll;
     z-index: 1;
-    height: 100%;
+    height: calc(100vh - 5rem);
     display: flex;
-    flex-direction: column;
-    border: 2px solid black; }
-    #chat-DOM #chat-container .chat-box {
-      list-style: none;
-      padding: 10px;
-      background-color: white;
-      overflow: auto; }
-      #chat-DOM #chat-container .chat-box .self-message {
-        margin-left: auto;
-        background-color: darkkhaki;
-        width: 20%;
-        right: 0; }
-      #chat-DOM #chat-container .chat-box .other-message {
-        background-color: darksalmon;
-        width: 20%; }
+    flex-direction: column; }
+    #chat-DOM #chat-container .ul-class {
+      height: 100%;
+      overflow: scroll; }
+      #chat-DOM #chat-container .ul-class .chat-box {
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: end; }
+        #chat-DOM #chat-container .ul-class .chat-box .self-message {
+          margin-left: auto;
+          background-color: darkkhaki;
+          right: 0;
+          display: flex;
+          justify-content: flex-end;
+          margin-top: 2%;
+          border-radius: 3rem;
+          padding: 1%; }
+        #chat-DOM #chat-container .ul-class .chat-box .other-message {
+          margin-right: auto;
+          background-color: darksalmon;
+          display: flex;
+          justify-content: flex-end;
+          margin-top: 2%;
+          border-radius: 3rem;
+          padding: 1%; }
     #chat-DOM #chat-container #input-id {
       background-color: #e1e7e9;
       display: flex; }
+      #chat-DOM #chat-container #input-id input {
+        flex: 3; }
+      #chat-DOM #chat-container #input-id button {
+        flex: 1; }
