--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -1,10 +1,40 @@
 .comment-li-con {
   display: flex;
-  width: 100%; }
+  width: 100%;
+  box-shadow: 0px 6px 26px 0px grey;
+  margin: 0.5rem; }
   .comment-li-con .comment-container {
     display: flex;
-    border: 1px solid black; }
+    align-items: center; }
+    .comment-li-con .comment-container .flex-arrangement {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between; }
+      .comment-li-con .comment-container .flex-arrangement .comment-content {
+        justify-content: center;
+        font-weight: 500; }
+        .comment-li-con .comment-container .flex-arrangement .comment-content span {
+          font-weight: 1000; }
     .comment-li-con .comment-container a {
       text-decoration: none; }
-  .comment-li-con .likes-container a {
-    text-decoration: none; }
+    .comment-li-con .comment-container .comment-delete-button i {
+      pointer-events: none; }
+    .comment-li-con .comment-container .comment-image-class {
+      height: 3rem;
+      width: 3rem;
+      overflow: hidden;
+      border-radius: 100%; }
+      .comment-li-con .comment-container .comment-image-class img {
+        width: auto;
+        height: 3rem; }
+  .comment-li-con .flex-arrangement-2 {
+    display: flex; }
+    .comment-li-con .flex-arrangement-2 .likes-container {
+      margin-right: 10%;
+      margin-top: 4%; }
+      .comment-li-con .flex-arrangement-2 .likes-container a {
+        display: flex;
+        text-decoration: none; }
+        .comment-li-con .flex-arrangement-2 .likes-container a i {
+          pointer-events: none; }
