--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -10,8 +10,8 @@
   box-shadow: 0px 6px 26px 0px grey; }
   .post-container .delete-button {
     align-self: flex-start; }
-    .post-container .delete-button .dropdown {
-      background-color: transparent; }
+    .post-container .delete-button .padding {
+      padding: 0 !important; }
   .post-container .post-top-row {
     display: flex;
     align-content: center;
@@ -39,5 +39,18 @@
     align-self: baseline; }
     .post-container .like-container a {
       text-decoration: none; }
+    .post-container .like-container i {
+      pointer-events: none; }
   .post-container .post-comment-list ul {
-    list-style-type: none; }
+    list-style-type: none;
+    padding: 0; }
+    .post-container .post-comment-list ul li {
+      width: 100%; }
+  .post-container .post-bottom-row {
+    display: flex;
+    width: 100%; }
+    .post-container .post-bottom-row .comment-area #comment-form-con {
+      width: auto; }
+      .post-container .post-bottom-row .comment-area #comment-form-con .comment-button {
+        border: 1px solid transparent;
+        background-color: transparent; }
