--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -25,8 +25,9 @@
                 margin-top: 4%;
                 display: flex;
                 list-style: none;
+                padding: 0;
                 li{
-                    padding: 2%;
+                    padding: 0;
                     font-size: 1.6rem;
                 }
                 .img-con{
@@ -51,7 +52,7 @@
             text-decoration: none;
         }
         #signIN{
-            font-size: 0.4rem;
+            font-size: 1rem;
         }
 
     }
