--- a/assets/scss/post.scss
+++ b/assets/scss/post.scss
@@ -10,8 +10,8 @@
     box-shadow: 0px 6px 26px 0px grey;
     .delete-button{
         align-self: flex-start;
-        .dropdown{
-            background-color: transparent;
+        .padding{
+            padding: 0 !important;
         }
     }
     .post-top-row{
@@ -49,10 +49,30 @@
         a{
             text-decoration: none;
         }
+        i{
+            pointer-events: none;
+        }
     }
     .post-comment-list{
         ul{
             list-style-type: none;
+            padding: 0;
+            li{
+                width: 100%;
+            }
+        }
+    }
+    .post-bottom-row{
+        display: flex;
+        width: 100%;
+        .comment-area{
+            #comment-form-con{
+                width: auto;
+                .comment-button{
+                    border: 1px solid transparent;
+                    background-color: transparent;
+                }
+            }
         }
     }
 }
