--- a/assets/scss/userSignIn.scss
+++ b/assets/scss/userSignIn.scss
@@ -1,8 +1,10 @@
 body{
-    background-image:url(../images/wallpaperflare.com_wallpaper.jpg);
-    background-repeat: no-repeat;
+    background-image: linear-gradient(0deg,#00203FFF 2%, #ADEFD1FF 74%);
     background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
+ 
 .userSignIn{
     position: absolute;
     top: 50%;
@@ -10,36 +12,95 @@ body{
     transform: translate(-50%,-50%);
     display: flex;
     background-color: transparent;
-    border:2px solid gray;
-    padding: 2rem ;
-    flex-direction: column;
     border-radius:1rem;
-    box-shadow: 4px  4px 18px -1px  black;
-    width: 44%;
-    height:45%;
+    box-shadow: 4px 4px 60px 11px black;
+    width:auto;
+    height:55%;
+    overflow: hidden;
+    .sign-in-image{
+        width:auto;
+        overflow: hidden;
+        img{
+            height: 100%;
+            width:auto;
+        }
+    }
     form{
         align-items: center;    
     }
+     
     a{
         text-decoration: none;
     }
     #google-logo{
         font-size:2rem;
+        color: var(--bgGrad1);
     }
     #mail{
         align-self: flex-start;
+        ::placeholder{
+            color:var(--bgGrad2);
+        }
+        input{
+            background:transparent;
+            border: none;
+            border-bottom: 2px solid black;
+            color:var(--bgGrad2);
+            width: 100%;
+        }
     }
     #password{
         align-self: flex-end;
+        ::placeholder{
+            color:var(--bgGrad2);
+        }
+        input{
+            background:transparent;
+            border: none;
+            border-bottom: 2px solid black;
+            color:var(--bgGrad2);
+            width: 100%;
+        }
     }
 }
-#signIn-Name{
-    align-self: flex-start;
-    border: 1px solid black;
-    width: 50%;
+#signIn-name{
+        font-size: 3rem;
+        display: flex;
 }
 #formArea{
-    align-self:flex-end;
-    border: 1px solid black;
-    width: 50%;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    background-image:linear-gradient(0deg,var(--bgGrad2) 36%,var(--bgGrad1) 100%);
+    padding: 1%;
+    .form-class{
+        margin-top: 10%;
+        .sign-in-button{
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: space-between;
+            input{
+                background-color: var(--bgGrad1);
+                border-radius: 1rem;
+                color:var(--bgGrad2);
+                width: 100%;
+            }
+        }
+        .margin-bottom{
+            margin-bottom:10%;
+            color: var(--bgGrad2);
+        }
+    }
+    .sign-in-bottom-row{
+        display: flex;
+        justify-content: space-between;
+    }
+}
+@media screen and (max-height:624px){
+    body{
+        background-color: blue;
+    }
+    .userSignIn{
+        flex-direction: row;
+    }
 }
