--- a/public/assets/css/chat_box.css
+++ b/public/assets/css/chat_box.css
@@ -71,8 +71,7 @@ body {
         justify-content: end;
         background-color: transparent;
         overflow-y: scroll;
-        margin: 0;
-        margin-top: 100%; }
+        margin: 0; }
         #chat-DOM #chat-container .ul-class .chat-box .self-message {
           margin-left: auto;
           background-color: var(--bgGrad1);
