--- a/assets/scss/chat_box.scss
+++ b/assets/scss/chat_box.scss
@@ -84,8 +84,7 @@ body{
                     margin-left: auto;
                     background-color: var(--bgGrad1);
                     right: 0;
-                    display: flex;
-                    justify-content: flex-end;
+                    width: fit-content;
                     margin-top: 2%;
                     border-radius: 3rem;
                     padding: 1%;
@@ -95,13 +94,12 @@ body{
                 .other-message{
                    margin-right: auto;
                    background-color: var(--bgGrad2);
-                   display: flex;
-                   justify-content: flex-end;
                    margin-top: 2%;
                    border-radius: 3rem;
                    padding: 1%;
                    font-weight: 1000;
                    color: var(--bgGrad1);
+                   width: fit-content;
                 }
             }
 
