bug : css chat : margin and padding

--- a/assets/css/chat_box.css
+++ b/assets/css/chat_box.css
@@ -126,4 +126,6 @@ body {
 
 @media screen and (max-height: 650px) {
   #chat-DOM {
-    margin: 15%; } }
+    margin: 5%; }
+  #chatPageCon {
+    padding: 8%; } }
