--- a/assets/scss/chat_box.scss
+++ b/assets/scss/chat_box.scss
@@ -159,6 +159,9 @@ body{
  
 @media screen and (max-height:650px) {
     #chat-DOM{
-        margin: 15%;
+        margin: 5%;
+    }
+    #chatPageCon{
+        padding: 8%;
     }
 }
