--- a/assets/scss/user_profile.scss
+++ b/assets/scss/user_profile.scss
@@ -28,6 +28,12 @@ body{
             width: 100%;
         }
     }
+    .name-con{
+        font-family: inherit;
+        font-weight: 100;
+        font-size: 2rem;
+        margin:2%;
+    }
 }
 .total-follower-data{
     a{
